async_pub_sub_macros/tests/fail/missing_bound_types_on_generic_multi_subscriber.rs
#![allow(unused_imports)]
use async_pub_sub::Subscriber;
use async_pub_sub_macros::DeriveSubscriber;

// TODO: Rework the error message to be more user friendly
#[derive(DeriveSubscriber)]
struct TestSubscriber<SubA, SubB>
where
    SubA: Subscriber,
    SubB: Subscriber,
{
    subscriber_a: SubA,
    subscriber_b: SubB,
}

fn main() {}
